src/styles/toast.css
.app-toast {
    background: var(--color-surface-tonal-a0);
    color: #000;
    border-radius: 6px;
    border: 1px solid var(--color-surface-a30);
    padding: 0.25rem 0.5rem;
    margin: 0;
    font-size: clamp(0.75rem, 0.9rem - 0.125vw, 0.875rem);
    line-height: 1.4;
}

/* Dark mode */
.dark {
    .app-toast {
        color: #fff;
    }
}

